Spacing fixes for the about section

--- a/Sandbox/portfolio/css/portfolio-screen.scss
+++ b/Sandbox/portfolio/css/portfolio-screen.scss
@@ -626,7 +626,7 @@ header {
 //************Desktop Stylings
 @media only screen and (min-width: 848px) {
     .main_div {
-        padding: 0px 13% 0px 13%;
+        padding: 2% 13% 2% 13%;
     }
     .project-tile{
         height: 325px;
